repository/inject-sidecar.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-sidecar
  annotations:
    policies.kyverno.io/title: Inject Sidecar Container
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod,Volume
    policies.kyverno.io/description: >-
      The sidecar pattern is very common in Kubernetes whereby other applications can
      insert components via tacit modification of a submitted resource. This is, for example,
      often how service meshes and secrets applications are able to function transparently.
      This policy injects a sidecar container into Pods that matches the namespace.
spec:
  rules:
    - name: inject-sidecar
      match:
        resources:
          kinds:
            - Deployment
            - Pod
            - Statefulset
            - Daemonset
          namespaces:
            - default
      mutate:
        patchStrategicMerge:
          spec:
            template:
              # metadata:
              #   annotations:
              #     (sidecar-image/agent-inject): "true"
              spec:
                containers:
                  - name: sidecar
                    image: busybox
                    imagePullPolicy: IfNotPresent
